--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedAkhet Store</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
  
@@ -24,6 +27,7 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
+                <img src="images/cart.png" width="30px" height="30px  " alt="">
             </div>
     
             <div class="row">
